--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,4 @@
          - DISCORD_TOKEN=${DISCORD_TOKEN}
          - OPENAI_API_KEY=${OPENAI_API_KEY}
          - PPLX_API_KEY=${PPLX_API_KEY}
+         - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
